--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
+    "pagerank.js": "^1.0.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
